fix nav bar z-index;

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,6 +43,7 @@ a {
    background: $Primary;
    position: fixed;
    width: 100%;
+   z-index: 10000;
    top: 0;
    left: 0;
    transition: all .3s;
